[gd_scene load_steps=8 format=3 uid="uid://nx0al43fohgb"]

[ext_resource type="Script" path="res://Scripts/game-court.gd" id="1_2q5si"]
[ext_resource type="PackedScene" uid="uid://63rwkitr0hur" path="res://Scenes/character-pallet.tscn" id="1_m6k1j"]
[ext_resource type="Script" path="res://Scripts/player1.gd" id="2_2mubn"]
[ext_resource type="PackedScene" uid="uid://c0xpfgbt1j0i1" path="res://Scenes/wall.tscn" id="5_pdseh"]
[ext_resource type="Texture2D" uid="uid://w77n3f6xqnf3" path="res://Art/middle.png" id="6_3w7re"]
[ext_resource type="PackedScene" uid="uid://dnlro18dflrw6" path="res://Scenes/goal-area.tscn" id="7_o76c6"]

[sub_resource type="GDScript" id="GDScript_sx4qs"]
script/source = "extends Area2D


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass
"

[node name="Game" type="Node2D" groups=["MainGame"]]
script = ExtResource("1_2q5si")

[node name="Background" type="ColorRect" parent="."]
z_index = -10
offset_left = -57.0
offset_top = -23.0
offset_right = 1208.0
offset_bottom = 673.0
color = Color(0, 0, 0, 1)

[node name="Player1" parent="." instance=ExtResource("1_m6k1j")]
position = Vector2(30, 324)
script = ExtResource("2_2mubn")

[node name="Player2" parent="." instance=ExtResource("1_m6k1j")]
position = Vector2(1125, 324)

[node name="Wall" parent="." instance=ExtResource("5_pdseh")]

[node name="Wall2" parent="." instance=ExtResource("5_pdseh")]
position = Vector2(0, 652)

[node name="TextureRect" type="TextureRect" parent="."]
z_index = -1
offset_left = 556.0
offset_top = -109.0
offset_right = 602.0
offset_bottom = 772.0
texture = ExtResource("6_3w7re")

[node name="GoalAreaLeft" parent="." instance=ExtResource("7_o76c6")]
position = Vector2(-7, 1)
script = SubResource("GDScript_sx4qs")

[node name="GoalAreaRight" parent="." instance=ExtResource("7_o76c6")]
position = Vector2(1171, 7)

[node name="LeftScore" type="Label" parent="."]
offset_left = 508.0
offset_top = 19.0
offset_right = 551.0
offset_bottom = 115.0
theme_override_font_sizes/font_size = 70
text = "0"

[node name="RightScore" type="Label" parent="."]
offset_left = 608.0
offset_top = 18.0
offset_right = 648.0
offset_bottom = 114.0
theme_override_font_sizes/font_size = 70
text = "0"

[node name="Button" type="Button" parent="."]
offset_left = 592.0
offset_top = 609.0
offset_right = 671.0
offset_bottom = 641.0
text = "EXIT"

[connection signal="area_entered" from="GoalAreaLeft" to="." method="_on_goal_area_left_area_entered"]
[connection signal="area_entered" from="GoalAreaRight" to="." method="_on_goal_area_right_area_entered"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
